# ChangeLog for net-misc/plowshare
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/plowshare/ChangeLog,v 1.35 2015/04/30 14:47:02 voyageur Exp $

  30 Apr 2015; Bernard Cafarelli <voyageur@gentoo.org>
  plowshare-2.1.0-r1.ebuild:
  Fix the doc install path again

*plowshare-2.1.0-r1 (14 Apr 2015)

  14 Apr 2015; Bernard Cafarelli <voyageur@gentoo.org> -plowshare-2.1.0.ebuild,
  +plowshare-2.1.0-r1.ebuild, +files/plowshare-2.1.0-fix_git_invocation.patch:
  Backport upstream fix for git invocation

*plowshare-2.1.0 (13 Apr 2015)

  13 Apr 2015; Bernard Cafarelli <voyageur@gentoo.org> -plowshare-1.0.0.ebuild,
  -plowshare-1.0.2.ebuild, -plowshare-1.0.4.ebuild, -plowshare-1.0.6.ebuild,
  +plowshare-2.1.0.ebuild, metadata.xml:
  Version bump, new homepage, modules are now fetched by user with plowmod
  command, drop some old versions

*plowshare-2.0.1 (10 Mar 2015)

  10 Mar 2015; Bernard Cafarelli <voyageur@gentoo.org> +plowshare-2.0.1.ebuild,
  metadata.xml:
  Version bump, optionally install a set of modules as plowhsare only provides
  core functionalities now. Thanks Matthieu Crapet for the notification on this
  new system

*plowshare-1.2.0 (03 Feb 2015)

  03 Feb 2015; Bernard Cafarelli <voyageur@gentoo.org> +plowshare-1.2.0.ebuild:
  Version bump

*plowshare-1.0.6 (27 Oct 2014)

  27 Oct 2014; Bernard Cafarelli <voyageur@gentoo.org> +plowshare-1.0.6.ebuild:
  Version bump

*plowshare-1.0.4 (05 Aug 2014)

  05 Aug 2014; Bernard Cafarelli <voyageur@gentoo.org> +plowshare-1.0.4.ebuild:
  Version bump

*plowshare-1.0.2 (14 May 2014)

  14 May 2014; Bernard Cafarelli <voyageur@gentoo.org>
  -plowshare-0_p20131130.ebuild, +plowshare-1.0.2.ebuild, metadata.xml:
  Version bump, remove old

  14 Mar 2014; Bernard Cafarelli <voyageur@gentoo.org> plowshare-1.0.0.ebuild:
  Host tarball as a workaround for #504512, thanks James Cloos
  <cloos@jhcloos.com>

*plowshare-1.0.0 (10 Mar 2014)