@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install postinst prepare test
+DESCRIPTION=Command-line downloader and uploader for file-sharing websites
+EAPI=5
+HOMEPAGE=https://github.com/mcrapet/plowshare
+IUSE=bash-completion +javascript view-captcha
+KEYWORDS=~amd64 ~arm ~ppc ~x86
+LICENSE=GPL-3
+RDEPEND=>=app-shells/bash-4 || ( app-text/recode ( dev-lang/perl dev-perl/HTML-Parser ) ) dev-vcs/git || ( media-gfx/imagemagick[tiff] media-gfx/graphicsmagick[imagemagick,tiff] ) net-misc/curl sys-apps/util-linux javascript? ( || ( dev-lang/spidermonkey:0 dev-java/rhino ) ) view-captcha? ( || ( media-gfx/aview media-libs/libcaca ) )
+SLOT=0
+SRC_URI=https://github.com/mcrapet/plowshare/archive/v2.1.1.tar.gz -> plowshare-2.1.1.tar.gz
+_eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=4502103f22ee3da13359ffc6ccb95c70
