@@ -5,28 +5,30 @@ AUX plowshare-2.1.0-fix_git_invocation.patch 2339 SHA256 1f66c0a23064da63a7727c4
 DIST plowshare-1.2.0.tar.gz 253572 SHA256 0f1ff5d2986334209389857d6c6f3f63162d661b28687747ae1a8612f3e5d678 SHA512 5fd8eeef5a4d6a42d03a858b451fa2ac121e0dbdcdb2f2981cef6660b0972e44396e3b8b3d9eb5b36ca8ce0aacda7df8f193ba4e5464c1f96a4c8ff2c104ff9a WHIRLPOOL 0009dc91d9a0fc15083c781fa6a73f46f966af673d20cf8897bb786f2337a36a75a0dae55dd2109f88d4e1a57578824763b1f79ae7949d497e9a9136ad2d2632
 DIST plowshare-2.0.1.tar.gz 80167 SHA256 89a9d8af78e026a09979f11ec3c2d5ba4922977874c6e62afd28295dfb82d1b9 SHA512 4ed6ac9f1b3d7893af22dd529debfd589e564d4e24bcaaaa0e2d542edad883d5dd98c2e8cd9621e6f2c88800f58b683e1d5be4d31f6b8d9386a9c9371d9fc7cc WHIRLPOOL 683a7cfcf323bf07f3d50d146e4e37a8f26b02e5a262ed41e5e19d7e934bb57fbe5313b70bf9e3208b0595de5b82b3e58f7bc3bdf7dd51f2daef6cc056843ccc
 DIST plowshare-2.1.0.tar.gz 89800 SHA256 762482dd11c1e1af08b940c613856a2f51e998b25c11ba14f6a7a734eb94de16 SHA512 7c4b9a4aae92fc9baf34133706a664c0c20547c1c83e68430bf9eb64a393d47c187d3c197c2f2a0e75a15b36d4522293ea93ff4b07cebc47f220ccf2dd1ef4a3 WHIRLPOOL e745eef81c4b2d3431d2a306915d035b94e94aa77c5c6eca521d6f2b9f90db7399f028ae37bc5df7e43e738dab28d9bd5f7cfd27d23d64e896f9b5722198f1b2
+DIST plowshare-2.1.1.tar.gz 90653 SHA256 96b3acd1dba1b14f3009334520969af4c00c8f4b7f5d924a26decc4b4a817e53 SHA512 4aae7c64ce8123301b241d31a0f25ffe414295d5d8b354423530f47cbe3dd91a4bbe57a686a6c56015dab37c6b463334b4f9165b570a2c0314c25ee94bc255fc WHIRLPOOL cde48f76136901c4c009611556beda92aa3b4e5ed9fc5d94487ed69d5f11745995dca7ba7bbd2dabe516161efe9e705a7bfbdd21423d96f506aae4079b847a34
 DIST plowshare-modules-2ededde1f34e78dcbacf02e900a2ce8cad2e148d.tar.gz 186296 SHA256 4b1f109120d8e8e0642971b4d7209a0d1a4c1952c13a7fdb80c5a52646158ad5 SHA512 a80a0d53e084f03b93b7466ae401733d9538cd398f8521bf7285cd475f4dbb9495a9d9a69606122f1f3e43b175db77c7eb0aa99526bb9af1debeba2941b23e4d WHIRLPOOL 75ad9cb5378e7f71bfce06f8d7f5082c774bb378e141abddeae13803fb374c0b1ce893deea7881ad24e1a3be3e55cccc5aa183cba71636f8ed78280c9806ee68
 EBUILD plowshare-1.2.0.ebuild 2047 SHA256 f727780b635a804652fc365d5f7063c7e765817f9e204aaa4476c1433653729b SHA512 b2d3df7d603d29ae3cfff44a5aae23b381b1c6372fc9955d7dc0ebb1d826516e66814d3e51d6b185237d0b22f529474ec5d8d50afb4674178d64909c93a7272d WHIRLPOOL fc86358c385cc04d4e67752559569305c6f497a449e6b7986965059cb55ba2477ce2582c407ed74c6458f986137bb7ef22c614d51508e5526f15b905eea3544b
 EBUILD plowshare-2.0.1.ebuild 2726 SHA256 8f36966dc212f5b2246eccf45af24cb1873945ae3b4f999b742e1f69f90e6c6b SHA512 195b1494067d1d7372e85dec8200c207861a4206d3d90455d66a3fce6f9150b8e9bbcba179338d9b49f2ce4c37b74860d9f2bf22fd080d7c8e7dcbde6c0f4a93 WHIRLPOOL 1794daada53f17196181a03064e22a9a20860de4a4b7bbb6db018b514ffcab5ee660d03b469c8b04ed2965ace55679b366db75a4c370772fb301bfe9166a2272
 EBUILD plowshare-2.1.0-r1.ebuild 1912 SHA256 6892fca4c2c9d83a2e470a95da76de89b08a57934b6eb932a1461e22e0ec974d SHA512 d6724f62261f97df1d98fe70b0beb103ae5f05bd3170985d7a3aee52fe75aa68203f14d495821c17b8e9bb7d1fd343dbfb89782d35e5949100a1c5f1efd100f7 WHIRLPOOL 7f0c5cbe5b4bfd32d2242cba2a964f0fa753ac8348b9ca28215e83302d867fe057d4698d1232540b4f75e60bd77ad3dd52cb5a4e23c7ccb9634961815de39eef
-MISC ChangeLog 6331 SHA256 516a041cc084792ea917e897105dc29af1126b300ec951f57e231ae5986dbf01 SHA512 ec2f0c7770ff7c2abebd0fa8167407e77ac816da92c42353a06a1ede1193e34c0db9a964ee1f20e4b1115916d03964feb7364d4f4ccfc41e9f3497dcf34db8f0 WHIRLPOOL dfb359567e0106dee699ec6a8ebf38bdb9fe72d7836cde53049c27c33d6cedca8c317a0a198c2590b08d7d28626f8fb609c19e8e9c5a9e118b644dae3a517164
+EBUILD plowshare-2.1.1.ebuild 1849 SHA256 0128def4ffb8cea37db7474a15c06254261a2e2fe5c8fe2fbc9e2cd9c6668cf6 SHA512 c9bb2919c995953b86bc4e80855b2f10c1a5e2717c790c6c2c88c0878ed9365ac48ddc018b72974ec4624dd1ab830b76b5a9095492b6e4fc75f2fdfb21b732aa WHIRLPOOL ece67e61566bc152b2c82635ff496b13b891f8063a4b95f01c6da50aad3985730d70d27f1ec74079ca9eb0e8fa5078a051c5cb78dd1432a0c40f8ab361047434
+MISC ChangeLog 6459 SHA256 47c751bb46ac6e68b5f649431e48fa736d639e2ede43768b25ddef7cf3aa850c SHA512 3d3e8e1900abf9a7ec8a6ed5bae992dd18ea1122a2c5eba6301f1d987a4adf82f7829bbb9336f79ad92cbb34b5ee201503735ac865e88201f1691fcbd343641c WHIRLPOOL 7e3c369ad8010ab63a350011315a634c2814a3235105df4e9430af1709ce58babf009bf0d76e7d1ff7b507ce47f0d9734371ef93d43294e4655cd239351d27af
 MISC metadata.xml 461 SHA256 3417890dea00bede4bc378f63ae4b71376fbd175f596794e973c858a4a985508 SHA512 24f72ac0bc45fc34199989534a05e432b8975d25985970a2e12864767628e1a1a69a2b5aaf41b86a99e0faa9344de2f5be5e41c341130c301a2a7ef38ecf707b WHIRLPOOL e1b488c87d8ed1e59d2ea6e018f930e02f73f61b57eec1373d07af1cbbae581fd27dfaa1a5dda81de151607716b695ddf1b9bee26b4dd6d09ca2c4a88562fa63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVQkBnXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVR5tIXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
-MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/pb8QAIq0lv7rmJYb3222fB0RegKQ
-03COiEsrmIPGYqXC/au3B3EaG03ZryEROllERswsFokyxdIEI90jjFuKmjZ4L4Wj
-hZlYuZ/nm69N2MmmeS5WhQUGNVCruahAM+o7FHZT+qYfNLi/FPgQjrWjJzfyAy0l
-qLxoL1m7544cvTmTYslIxAm0x45FRCat079uYiRLZnIiGhmRfwH+lB5rh2pktZh9
-0r6UFUw5DSPjO+le/JwAcgJ9xbbI+ZudRYgCUJGX/vK+Kz4fol8qA5hB8MTceIuj
-E6eo64c7xzw5RRH2MGLAgEsIvEH5F/0+qB3/q5i/QmEJvOZSsXcKJuQXwzOyjdez
-Qjzy2QeD+S0Zsauf0iFXfgonDPxLokGgGfdlSzlRUBMKJv6mJFMMXbzYioTsrGal
-jBiPM+fznDeyiJCB9MF+VBidddstOhCBv3+NP9EaqFmaF9yKVsyrKADniLCg75rZ
-chWrE0XGdb3ZfQIer2z7Boixjz5iU0GcQ8RlWjOU//7P/bJJl7/AG+PilT/gnhB5
-p2k+/njH4IMklCAJUpdft/Afuo6UbFk4sUW7CVsODajEiDkP3CZbcmXfywoIX3Vv
-PYSDFhEmN+gdoXLlVN0HHpxJVvGo6IBr0jCTn3i5v5x/mv60WYmDXuHe4EBQBZeM
-epQn3LQhMOn0NiUH+NVD
-=nwvr
+MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/rXQP+wcNeti8Xxp85TQ1SsWTcwll
+Ccq1ebT1rILYXOlIj71LOxq8l5eEKID0/t644l7wO0IsHMhAoaGHNMWUCsl3FlUN
+2gK61WPcdj1fRlcioYH6wOlus8/d+fDn6GnlyKkwWaGFv8DraDnUDJABmaD7fnh7
+tP4TjDEs0GVSEES5/tU/hkZ+hRgx3h9cCf5a89dfq/hBzVy6BtX/4XCYd2vU7mVb
+joa5tgFxnjnrFyA5+l7WIr8PkamNxb2X1c3yDpLaEX5WboEYghRoHZCJAvufU/Nb
+5Ni9Gq9xG4gCcfdTbBoOhGgSZs6eYsp53MwxEbI8M3cEQIpN6njkR5J7jW7wRpkK
+ib5jPcKxduh2AEkq3LnM9IfkGNS/EvKvSWghO2FEvY0MVzT47EB8qIhFgIYMZW1t
+ZAkIt37m4wgg5uAYRnANG8frC7FQzVEa69oIZW9dQgNlYhrBlUJgZQr4QFNlkLvv
+2Rlfr4Sri9frn4Jpqu8eyaNGyrHPmlNRB4hzB7m9kQRKwH/GTK0Lwi1LnWoOl2+E
+H9iCJFFrqu3Rv03JwZD4gQWg78KokId9UwLXqMJIs9JKJgiPrSYB9cxUDurXUuKc
+GBdYZasRIJAXC2yFUAogksU2eyzwL4YvC5O9SgJv000EZmHkwNAN8xXjoGijzpEI
+qWAMB8H4sB5hPBRoHTj7
+=zJOA
 -----END PGP SIGNATURE-----
