@@ -87,25 +87,25 @@ EBUILD llvm-3.5.0.ebuild 15233 SHA256 dc10d2328a002697e1dc3aa20e9b2fcf17f2254f69
 EBUILD llvm-3.5.1.ebuild 15323 SHA256 3b673170e10b2cbad34d877eeaa870f7d26d777b855019a4a01e06dd339d1909 SHA512 135e621ece0d5897efd22413f2654d5257b1c6b5d559bd5ed87b69cdf7e63c8631d74e01a1cf81e5763fb012d01318c99f601da32c894ab5303f0f21c6fb643a WHIRLPOOL dbda09e5c18c8beb2078d146a478c410be855473666623ccf8e555915d24e315d2f5a497b04db0f440594453505fe63701f34b1c6fe4fe1e0f1cad4d71cc88ba
 EBUILD llvm-3.5.2.ebuild 15323 SHA256 85d49b60b47ae2b626b6911b208a3660e5a882a34b78d878efa7ca521b5ee867 SHA512 77a80f78d376f56c6b2f0894e08a1c5dd841730c5bc79f15f32ce803ed9085da7c698ec42012ba49fe33ce00601ec766a24659224f6ebcc0f26e2177455a62a8 WHIRLPOOL 82035a26779b202269efe1023c860e246cfc8b1dc12e78f682d9c02362b6af6b3c0b6c8c1852ba4abc80d69198d3aac994f4204400fef7be17bd8c24f044723c
 EBUILD llvm-3.6.0.ebuild 15310 SHA256 213f00e1aeb57bed52823f43025c63a820a0aa92421de7ec2d539d61bb212577 SHA512 13be6ca07c5c90dd28656261b4585aa3810ab86024949d5865892bbd58508d9f77eab390aa5a5288c84aa3e2ce8d0ed5aeb9b2b84f28a77fb22b1dc5abf24d44 WHIRLPOOL 0b3f9778f8d3ca8417e7943ad49c236446de927ddcb80bd5b5fb62fc6accd63663666db716104dd6eb27552f288999a7191842b6fc0c4ccb9d810152b78f4659
-EBUILD llvm-9999.ebuild 14402 SHA256 f3956d84186c81d5f577ee72843bc13e02a3b1c55f3809d4030e714e7b804d35 SHA512 6873b7163408b9d0f71f62c2b041719791f0e887dc338f93ffcf06ee9065491302ef33c63d1bf383856e84f41ad275fc81ea5ec013797459216753e29f5eec94 WHIRLPOOL b07e0cfdb7b75174eec169d0fb159cfce2eb88ae6337f2c853687e98bc696d656c621ef7f58b70cc8ec288be8aa838f7eeac62177583d909babe01d18264224f
-MISC ChangeLog 39861 SHA256 80767357354f2c5e072faded03c6f89aad6694ca596ce1c56b52086b3ffcddb2 SHA512 b9c4a0901ab3f6b76658b41969e0a68e974a9a4502d6a809d20677bae07f29af86475a88f74d56fb7410c423587a7aefbc9dfab3285705bf006d8786622e2c86 WHIRLPOOL 738d0abe0df0a1fd246894c95e7d828dfd3a287f262247bb5c46b24592f2b4add4101dddc1f051821eff7728f5e526187f4d3ff9ee98f5f9bd456e879c64b21f
+EBUILD llvm-9999.ebuild 14475 SHA256 1bc3c12d5c0429815c7ce45e1615b2e5908471c2bdd9e2838bcf83e4f69af45b SHA512 94a186a65d2498b7ea8d48146026591ceaf18277d5cf2cfb7509ec769d2d2d21fbc0cb66aca59e1439392ce056460cd174340761592d4719404b7aeba0b43785 WHIRLPOOL 47ea4de5b80686ed1235d1034d9dbae15ec05baa37d15d1fa62f3e5b3f2f92212a2a152ce70765ce312c8d77cb76bba8cf4b22d25ca2c5a5c2b575ef19a7aeff
+MISC ChangeLog 40065 SHA256 85852666ece90ff61f5fd2a83d1c028ab0aff466ad98390bed893592adb91337 SHA512 73d15b3e89d8aca7c25dab24a83fa7cdedd1426d5744b4fd1aa89b4530d9a33e7cac71d860f393ece73f4c08dff24772028c25cd7e8f315fb777fa2dc1a4649a WHIRLPOOL 6149bb30b0e796c6f1dbdcd58a3033183807b9f864da4e0a8b1339c56175d0a90bc8390c122f093de16b0fedad1a0d05d1c18b8512f9ec21543f704fb7c21bb3
 MISC metadata.xml 2787 SHA256 22dc7b91c98fb4258271cc9cd4bd99f214b30f258bbdfea83dc37ac74df8d498 SHA512 4fca0d2551a889e7800c688077adf405697d05730bf66621ac53fdefeeeaddb7a8d868973edc9a6fe48e9a07734f1d43fd88229bae693fe181a7dbb95eeb9481 WHIRLPOOL 6284033d40bef02510f924ec1e6a9d3e1072bf26945fdedde0ddaf1d6d35c3d30971cdefa583a8e4d9db3da67bee04145ace15ded4cee63f534588b66633c76b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVL6MpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ7BAEBCABmBQJVR5fhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
-MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/JDsP/2PXz37n2MqoeGb2a5chguxJ
-LVD4Z/waGD5YW/tfXUZ0kPDWr4eFk2wM6HBT/kKZmT072wJyoVHt7kgQ9sFhsG8R
-hRjyGKwRhjxGsSMX5kX1BVrDDRybQe+Tw/xJCpaXxuOMRQ1BOFH3/xHl5FRu6/1S
-TSPs2Izgp2cs6pDH7PBgImF1mChgBzvA+khryYy9mjBwssZ69C0/BPHdow10NMlx
-x+FSte76+JjyB8CUiBCRJGaf/rvFNZ8e7RrMY8ZR4ckT8DMiOTIQmS/sVI+X0TEG
-hd9iB2V5Z/9gbWQ93kVIZvnApwZ2Nlg+VameR4ng+Ns9k1oIbk4zMR1hG3bV3Nzm
-0er4onMwyKT0e2qgD4ivCo3LdD9Mx6CvhxHoT8zxTIF45aRTOp9MIrZaF4gwHCce
-xiqPAPXiXUE5T2mHXXxyg6K4kEuy0TSisaLS+Yo+0a+ndKPcVI9bgVTRxBgx0Tj8
-cZvjGvvzB5VeAjuwIu7Nx0hqYFc+sYmuYxJwY7rEsbeSYzIXRcKcu9qnQ3tmxx/R
-qsz5m/WNzbTweSzBluQKGl7lNA1TDMmo2MXdygro9ZUwcHeK/+Wpq1CXhxy9/det
-Q50vuB9umQeFxJFbGS0xM5HzXMq/ZA6p0SERZhzp9EM6N8S325JXYUjIEdEZs1FA
-bLImkw7oifpcAEYZOX7B
-=HFb8
+MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/8v8P+I2v4GD9A3Lt43dnedYkdLcD
+r+2Z9ToUErhtBnhRl74sxN6mm9P5kF/aspqJQDw4bMzENV2MzJNacYS7J+fb8N18
+Z8PDJg8RtuUmxigHmokMj4xxG95YwjL7sgwjcX1V54PBInxod8mf1pYmnQGZjtef
++HzQYaUta8r6dEoApVWluye4o7xE46R/qqcgpO0Ei02k0mwb3RQPaVNE6KKNSYea
+QCdsokDBOg6NkzWZcZrx9RRbrnqlXJFcYdco8r++8XaZG5i2SXX7Y1B91YgqD1mc
+gefq+XtDfML7NFLz81THazzqE+SIE/3riNpI++rEwkANEoMnlY9+3gtH3RIfj8WL
+e3la8LcoP8RA2cRGEmnifyUXNPfIcLsPpkAu4Ls0NOKYEskG+1Fm/EQkd1JQv/Ef
+6vTR1pbLJlhWDPwQJfjMLBXqX18ZXnd6sHI0kyZxjPUajD2XyzmekEUHTp6o7dHj
+rxsG1BqqLCN7tUiVl8woX0ZtOFSVSdzODEAmHXSgopriMxDpTTX5RAoHPfm2mY86
+Fkiixm+Oj+siJG8Izeb4j33hIamT/MrcfNIxjEuDQZab3FmXroEuGpW6apvJ2tmL
+RtJLp2GVtcqMjbRM66xMX4S5XtrCYGPtitwPyNevvPljuFi5QIZOxNKdPx8OSH3Q
+8DI31jr9VRIQn71Hzb4=
+=YlrZ
 -----END PGP SIGNATURE-----
